examples/test/testpolicy18221.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18221
  namespace: namespace93
spec:
  podSelector:
    matchLabels:
      key2: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value34
          key45: value36
          key46: value43
      podSelector:
        matchLabels:
          key39: value7
          key15: value40
          key26: value11
